fix: remove solution content overflow

--- a/src/styles/components/cards.css
+++ b/src/styles/components/cards.css
@@ -7,7 +7,7 @@
   }
 
   .content-card {
-    @apply bg-surface rounded-xl size-fit p-4 m-4;
+    @apply bg-surface rounded-xl h-fit p-4 m-4;
     @apply shadow-surface-extra-muted shadow-lg;
     @apply border-1 border-surface-accent;
 
@@ -20,7 +20,7 @@
   }
 
   .card {
-    @apply bg-surface-accent rounded-xl size-fit p-4 my-6;
+    @apply bg-surface-accent rounded-xl h-fit w-full p-4 my-6;
     @apply shadow-surface-extra-muted shadow-lg;
     @apply border-1 border-surface-extra-accent;
 
@@ -38,10 +38,7 @@
     @apply border-1 border-surface-accent;
 
     > .cover {
-      @apply -mt-8 -mx-10 rounded-t-xl;
-      > img {
-        @apply rounded-t-xl;
-      }
+      @apply -mt-8 -mx-10;
     }
   }
 }
